--- a/product_details.css
+++ b/product_details.css
@@ -14,6 +14,7 @@ body {
     max-width: 1100px;
     width: 100%;
     margin: 0 auto;;
+    background-color: #f2f8fa;
 }
 
 /* Header Section */
@@ -22,7 +23,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 3.5rem;
+    height: 4rem;
     background-color: #F6FCFD;
     box-shadow: 0px 5px 30px rgba(18, 41, 47, 0.2);
     padding: 0 2rem 0 6.25rem;
@@ -50,7 +51,7 @@ input[type=text] {
     border: 0;
     outline: 0;
     height: 2rem;
-    width: 70%;
+    width: 325px;
 }
 
 nav {
@@ -108,6 +109,10 @@ nav .inactive {
 .header-myaccount {
     opacity: 0;
     visibility: hidden;
+    display: none;
+}
+
+#header-mobile{
     display: none;
 }
 
@@ -298,6 +303,14 @@ nav .inactive {
     order: 2;
     flex-grow: 0;
     border-radius: 50%;
+}
+
+#comment-img{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 865px;
+    top: 283px;
 }
 
 #save-img{
@@ -1044,14 +1057,21 @@ nav .inactive {
 
 /* Footer Section */
 
-#main-footer{
+footer{
     position: absolute;
-    top: 1250;
-    left: 30px;
-    width: 910;
+    top: 1450px;
+    width: 900px;
+    justify-content: space-between;
 }
 
-.main-footer {
+.main-footer{
+    position: absolute;
+    top: -200px;
+    left: 50px;
+    width: 100%;
+}
+
+.sub-footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1105,11 +1125,88 @@ nav .inactive {
         left: 50px;
     }
 
+    /* menu */
+
+    #header-mobile{
+        display: block;
+        position: absolute;
+        left: 45px;
+        top: 10px;
+        border: 1px solid #C9EFF8;
+    }
+
+    .handbur{
+        display: flex;
+        cursor: pointer;
+        background-color: #FFFFFF;
+        border: 1px solid #C9EFF8;
+        width: 400px;
+        height: 50px;
+    }
+    #hand-mobile{
+        width: 50px;
+        padding-left: 15px;
+        padding-top: 11px;
+    }
+    .bars{
+        display: block;
+        width: 30px;
+        height: 2px;
+        margin-top: 3px;
+        -webkit-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+        background-color: #000000;
+    }
+    
+    .search{
+        position: absolute;
+        left: 60px;
+        top: 9px;
+        color: #65696A;
+        background-color: #E4EDED;
+        transition: box-shadow 0.1s ease-in-out 0s, color 0.1s ease-in-out 0s;
+        color: rgb(12, 11, 11);
+    }
+    
+    .dropd-mobile {
+        position: absolute;
+        display: block;
+    }
+    
+    .dropdown-item-mo {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        font-weight: 500;
+        font-size: 16px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+    
+    .dropdown-item-mo .ad-mobile {
+        color: black;
+        width: 400px;
+        padding: 5px 10px;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+    }
+    
+    .dropdown-item-mo .ad-mobile:hover {
+        background: #AEE7F5;
+        border: 1px solid #898E8F;
+    }
+    
+    .dropd-mobile.active .dropdown-item-mo {
+        display: block;
+    }
+
+
     /* product image */
 
     .ph-img-div{
-        width: 384px;
-        height: 264px;
+        width: 390px;
+        height: 290px;
         position: absolute;
         top: 100px;
         left: 50px;
@@ -1187,6 +1284,12 @@ nav .inactive {
         position: absolute;
         left: 110px;
         top: 570px;
+    }
+
+    #comment-img{
+        position: absolute;
+        left: 344px;
+        top: 574px;
     }
 
     #save-img{
@@ -1620,6 +1723,12 @@ nav .inactive {
     }
 
     /* Footer Section */
+
+    footer{
+        position: absolute;
+        top: 1450px;
+        width: 500px;
+    }
 
     #main-footer{
         position: absolute;
