--- a/Product-details/product-details.css
+++ b/Product-details/product-details.css
@@ -36,12 +36,13 @@ body {
     display: flex;
     align-items: center;
     width: 60%;
+    gap: 1rem;
 }
 
 #main-header .header-form {
     display: flex;
     align-items: center;
-    width: 60%;
+    width: 300px;
     height: 2rem;
     border-radius: 0.3125rem;
     color: #65696A;
@@ -74,12 +75,11 @@ body {
     fill: currentColor;
     width: 20px;
     height: 20px;
-    margin-right: 0.5rem;
   }
 
 #main-header nav {
     display: flex;
-    justify-content: space-evenly;
+    gap: 1rem;
     align-items: center;
     width: 45%;
 }
@@ -89,16 +89,13 @@ body {
     font-weight: 600;
     font-size: 0.9rem;
     padding: 0.375rem 0;
-}
-
-#main-header nav .active {
-    color: #12292F;
-    border-bottom: 3px solid #FF8181;
-}
-
-#main-header nav .inactive {
     color: #6A7B7B;
     border-bottom: 3px solid transparent;
+}
+
+#main-header nav .inactive:active {
+    color: #12292F;
+    border-bottom: 3px solid #FF8181;
 }
 
 #main-header span {
@@ -109,14 +106,7 @@ body {
 }
 
 #main-header .header-status {
-    border: 2px solid #5CCEEB;
-    border-radius: 0.3125rem;
-    padding: 0.375rem 1.625rem;
-    font-size: 0.875rem;
-    font-weight: 600;
-    color: #12292F;
-    background: #12292f00;
-    transition: background .2s ease;
+    display: none;
 }
 
 /* #main-header .header-status:hover {
@@ -127,6 +117,10 @@ body {
     border: 0;
 } */
 
+#input-mo{
+    display: none;
+}
+
 #main-header .mobile-only {
     display: none;
 }
@@ -135,7 +129,7 @@ body {
     display: flex;
     justify-content: flex-end;
     gap: 1rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 
 #main-header hr {
@@ -144,9 +138,16 @@ body {
 
 
 #main-header .header-myaccount {
-    opacity: 0;
-    visibility: hidden;
-    display: none;
+    display: flex;
+    flex-direction: row;
+}
+
+#main-header .header-myaccount a{
+    display: flex;
+    font-size: 0.875rem;
+    font-weight: 600;
+    color: #12292F;
+    padding-right: 5px;
 }
 
 /* Hamburger Menu */
@@ -174,7 +175,7 @@ body {
 #sec-2-div{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 50px;
 }
 
 #sec-3-div{
@@ -571,6 +572,8 @@ body {
     width: 750px;
     font-size: 12px;
     font-weight: 600;
+    height: 40px;
+    overflow: hidden;
 }
 
 /* Ready */
@@ -581,6 +584,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
+    padding-left: 30px;
     height: 400px;
 }
 
@@ -599,11 +603,11 @@ body {
 
 .ready a {
     text-decoration: none;
-    color:#12292F;
+    color: #f1f1f1;
     font-size: 1rem;
     font-weight: 600;
     padding: 0.9rem 2.5rem;
-    background: #5CCEEB;
+    background: #12292F;
     border-radius: 5px;
     margin-top: 1rem;
 }
@@ -650,5 +654,330 @@ body {
     background-color: #12292F;
     color: #DEF5FB;
     text-align: center;
-    height: 3.6rem;
+    height: 3rem;
+}
+
+
+/* mobile view */
+
+@media screen and (max-width: 600px){
+    #main-header {
+        padding: 0 2rem;
+        height: 4rem;
+    }
+
+    #main-header .img-search .shopmore-logo {
+        display: none;
+    }
+
+    #main-header .img-search .shopmore-mobile-logo {
+        display: block;
+        width: 2.75rem;
+    }
+
+    #main-header .img-search .header-form {
+        display: none;
+    }
+
+    #main-header nav .menu {
+        display: none;
+    }
+
+    #main-header nav {
+        justify-content: flex-end;
+    }
+
+    .menu a {
+        text-decoration: none;
+        font-size: 0.9rem;
+        color: #f1f1f1;
+    }
+
+    #main-header nav .menu .header-myaccount{
+        display: none;
+    }
+
+    #main-header nav .menu.is-active {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        position: absolute;
+        width: 100vw;
+        height: 80vh;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        overflow-x: hidden;
+        background-color: #ffffff;
+    }
+
+    #main-header nav .menu .header-status {
+        display: none;
+    }
+
+    #main-header nav .hamburger {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        width: 40px;
+        z-index: 20001;
+        user-select: none;
+        appearance: none;
+        border: none;
+        outline: none;
+        background: none;
+    }
+
+    #main-header nav .hamburger div {
+        height: 5px;
+        background: #12292F;
+        margin: 3px 0;
+        border-radius: 24px;
+        transition: .3s;
+        position: relative;
+        z-index: 1;
+        transform-origin: 0 0;
+    }
+
+    #main-header nav .hamburger .line {
+        width: 40px;
+    }
+
+    #main-header nav .hamburger.is-active .line-one {
+        transform: translate(0px, -2px) rotate(45deg);
+    }
+
+    #main-header nav .hamburger.is-active .line-two {
+        opacity: 0;
+        transform: translateX(0px);
+    }
+
+    #main-header nav .hamburger.is-active .line-three {
+        transform: translate(-3px, 3px) rotate(-45deg);
+    }
+
+    #main-header nav .menu hr {
+        display: block;
+        height: 5px;
+        border: 2px solid #5CCEEB;
+        background-color: #5CCEEB;
+        width: 90%;
+    }
+
+    #main-header nav .menu .mobile-only {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        width: 90%;
+    }
+
+    #main-header nav .menu .mobile-only a {
+        color: #6A7B7B;
+    }
+
+    /* search */
+
+    #input-mo{
+        display: block;
+        padding-top: 30px;
+        padding-left: 30px;
+    }
+    
+    #input-mo .header-form {
+        display: flex;
+        align-items: center;
+        width: 90%;
+        height: 2rem;
+        border-radius: 0.3125rem;
+        color: #ffffff;
+        background-color: #12292F;
+        transition: box-shadow 0.1s ease-in-out 0s, color 0.1s ease-in-out 0s;
+        border: 0;
+        outline: 0;
+    }
+    
+    #input-mo input[type=search] {
+        all: unset;
+        display: block;
+        font-size: 1rem;
+        font-weight: 600;
+        padding: 0 1rem;
+        width: 100%;
+        height: 100%;
+    }
+    
+    #input-mo button {
+        all: unset;
+        cursor: pointer;
+        width: 2rem;
+        height: 2em;
+      }
+      
+    #input-mo svg {
+        display: flex;
+        color: #65696A;
+        fill: currentColor;
+        width: 20px;
+        height: 20px;
+        margin-right: 0.5rem;
+    }
+
+    /* section mobile 1 */
+
+    #sec-1-div{
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* section mobile 2 */
+
+    #sec2-1-div{
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    /* section mobile 3 */
+    
+    #sec3-2-div{
+        padding-top: 0px;
+        gap: 30px;
+    }
+
+    #sec3-4-div{
+        gap: 50px;
+    }
+    
+    #sub-img{
+        width: 150px;
+        height: 150px;
+    }
+
+    .pro-name{
+        font-size: 13px;
+    }
+
+    .free-s{
+        font-size: 13px;
+    }
+
+    .star-mo{
+        width: 15px;
+        height: 15px;
+    }
+
+    .sub-price{
+        text-align: center;
+        font-size: 16px;
+    }
+
+    .sub-name{
+        font-size: 16px;
+    }    
+
+    .de-div{
+        width: 450px;
+        height: 150px;
+    }
+
+    .de{
+        font-size: 13px
+    }
+
+    .de-d{
+        font-size: 11px;
+        width: 415px;
+    }
+
+    #Comment{
+        width: 400px;
+        height: 150px;
+    }
+
+    #sec5-1-div{
+        height: 120px;
+    }
+
+    #sec5-2-div{
+       padding-top: 5px;
+    }
+
+    #review-img{
+        width: 80px;
+        height: 80px;
+    }
+
+    #review1{
+        padding-left: 10px;
+        gap: 10px;
+    }
+
+    .review-name{
+        font-size: 12px;
+        font-weight: 600;
+    }
+    
+    .review{
+        width: 300px;
+        font-size: 11px;
+        font-weight: 500;
+        height: 40px;
+        overflow: hidden;
+    }
+
+    .ready h2 {
+        font-size: 1.8rem;
+        font-weight: 700;
+    }
+    
+    .ready p {
+        font-size: 0.7rem;
+        width: 400px;
+        font-weight: 600;
+    }
+
+    /* Footer Section */
+    
+    #main-footer .main-footer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        padding-left: 30px;
+        gap: 1rem;
+    }
+
+    #main-footer .footer-mobile {
+        display: block;
+        padding-bottom: 20px;
+    }
+    
+    #main-footer .footer-main-logo {
+        display: none;
+    }
+
+    #main-footer .foot-item {
+        width: 100%;
+    }
+    
+    #main-footer .footer-item {
+        display: flex;
+        flex-direction: column;
+        align-self: flex-start;
+        gap: 0.8rem;
+    }
+    
+    #main-footer .footer-item a {
+        text-decoration: none;
+        color:#475252;
+        font-size: 0.8rem;
+        font-weight: 600;
+    }
+    
+    #main-footer .footer-item h5 {
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: #000000;
+    }
 }
